--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "API",
+  "name": "api",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
@@ -18,6 +18,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.19.0",
+    "bcryptjs": "^2.4.3",
     "concurrently": "^5.0.1",
     "express": "^4.17.1",
     "if-env": "^1.0.4",
