--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "axios": "^0.19.0",
     "bcryptjs": "^2.4.3",
     "concurrently": "^5.0.1",
+    "config": "^3.2.4",
     "express": "^4.17.1",
     "if-env": "^1.0.4",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.8.0",
     "nodemon": "^2.0.2",
     "react-confirm-alert": "^2.4.1"
