--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "movieform",
+  "name": "eat-and-listen",
   "version": "0.1.0",
   "private": true,
   "proxy": "http://localhost:3001/",
@@ -13,6 +13,7 @@
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
     "react-transition-group": "^4.3.0",
     "reactstrap": "^8.2.0",
