got 2nd api to fetch, added refresh button to cocktail card

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.8.0",
     "nodemon": "^2.0.2",
+    "random": "^2.1.1",
     "react-confirm-alert": "^2.4.1"
   }
 }
